Name: codex
Version: 0.1
Cabal-Version: >= 1.8
Homepage: http://ireneknapp.com/
License: BSD3
License-File: LICENSE
Author: Irene Knapp
Maintainer: irene.knapp@icloud.com
Copyright: Copyright 2013 Irene Knapp.
Category: Distribution
Build-Type: Simple
Synopsis: A new package repository for Haskell

Executable codex
  HS-Source-Dirs: Haskell
  Main-Is: Codex.hs
  Build-Depends: aeson >= 0.6.1.0 && < 1,
                 base >= 4.5 && <= 5,
                 bytestring >= 0.9.2.1 && < 1,
                 text >= 0.11.3.1 && < 1

